Check if log file is zipped (#8773)
* Check if log file is zipped

* Check that outputStream isn't already a GZIPOutputStream

* No longer depend on file type order